# whiteboard

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  flake.nix  pyproject.toml  requirements.txt  shell.nix
.github/: pull_request_template.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  ws.py
backend/models/: constants.py  mouse.py  mouse_cursor.py  pen.py  stroke.py
backend/rs/: rs.py
backend/src/: main.py
backend/src/models/: constants.py  cursor.py  data.py  erase.py  stroke.py
backend/src/rs/: rs.py
backend/src/utils/: cm.py
backend/src/ws/: ws.py
backend/ws/: ws.py
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/info/: layout.tsx
frontend/src/app/info/login/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/ui/: login.tsx  navbar.tsx  signup.tsx  whiteboard.tsx
frontend/src/app/ui/components/: icon.tsx  toolbar.tsx  whiteboard.tsx
frontend/src/models/: constants.ts  cursor.ts  data.ts  erase.ts  mouse.ts  pen.ts  stroke.ts
frontend/src/utils/: stroke.ts  ws.ts
