[project]
name = "whiteboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Subeen",email = "subeenregmi123@gmail.com"},
    {name = "Gagan", email = "gnawalign@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false